--- a/widget/templates/layouts/list-4.html
+++ b/widget/templates/layouts/list-4.html
@@ -18,7 +18,7 @@
                         <div class="list-item-media text-center overflow-hidden text-overlay">
                             <div class="li-actions-item">
                                 <i class="glyphicon glyphicon-option-horizontal" style="right: 0;"
-                                    ng-click="WidgetHome.showDrawer($event, WidgetHome.items[$index + 1])"
+                                    ng-click="WidgetHome.showDrawer($event, WidgetHome.items[$index])"
                                     role="button"></i>
                             </div>
                             <div class="list-media-holder text-overlay"
