--- a/widget/templates/layouts/video-player.html
+++ b/widget/templates/layouts/video-player.html
@@ -44,6 +44,7 @@
                 <vg-mute-button></vg-mute-button>
                 <vg-volume-bar></vg-volume-bar>
             </vg-volume>
+            <vg-playback-button vgFor="videogularElement" [playbackValues]="[ '1.0', '2.0', '4.0' ]"></vg-playback-button>
             <vg-fullscreen-button class="fullscreen-btn"></vg-fullscreen-button>
         </vg-controls>
         <vg-overlay-play ng-class="{'hidden': videoAlreadyPlayed()}"></vg-overlay-play>
