--- a/widget/templates/layouts/list-1.html
+++ b/widget/templates/layouts/list-1.html
@@ -10,12 +10,12 @@
         <div id="emptyContainer" class="padded" ng-if="!loadingData && (!WidgetHome.items || (WidgetHome.items && WidgetHome.items.length === 0))"></div>
         <div class="padded padding-top-zero text-overlay">
             <div class="list-layout">
-                <div class="row layout-1" infinite-scroll="WidgetHome.loadMore()"
+                <div class="row layout-1" infinite-scroll="WidgetHome.addMore()"
                      infinite-scroll-distance="1"
                      data-infinite-container=".infinite-scroll-parent"
-                     infinite-scroll-disabled="WidgetHome.noMore"
+                     infinite-scroll-disabled="WidgetHome.stopScroll"
                         >
-                    <div class="clickable col-xs-6 pull-left text-overlay" ng-repeat="item in WidgetHome.items"
+                    <div class="clickable col-xs-6 pull-left text-overlay" ng-repeat="item in WidgetHome.displayItems"
                          ng-click="WidgetHome.goToMedia($index)" class="list-item-odd">
                         <div class="list-item-media text-center border-radius-three overflow-hidden text-overlay">
                             <div play-btn="{{item.data.videoUrl.length > 0  || (skipMediaPage && (item.data.videoUrl.length > 0 || item.data.audioUrl.length > 0)) }}" class="list-media-holder text-overlay">
