--- a/widget/templates/layouts/list-2.html
+++ b/widget/templates/layouts/list-2.html
@@ -12,9 +12,9 @@
 
         <div id="emptyContainer" class="padded"
             ng-if="!loadingData && (!WidgetHome.items || (WidgetHome.items && WidgetHome.items.length === 0))"></div>
-        <div class="list-layout" id="listLayout2" infinite-scroll="WidgetHome.loadMore()" infinite-scroll-distance="1"
-            data-infinite-container=".infinite-scroll-parent" infinite-scroll-disabled="WidgetHome.noMore">
-            <div class="clickable list-item text-overlay" ng-repeat="item in WidgetHome.items"
+        <div class="list-layout" id="listLayout2" infinite-scroll="WidgetHome.addMore()" infinite-scroll-distance="1"
+            data-infinite-container=".infinite-scroll-parent" infinite-scroll-disabled="WidgetHome.stopScroll">
+            <div class="clickable list-item text-overlay" ng-repeat="item in WidgetHome.displayItems"
                 ng-click="WidgetHome.goToMedia($index)">
                 <div class="list-item-media text-left overflow-hidden">
                     <div class="list-media-holder pull-left text-overlay"
