--- a/widget/templates/layouts/list-3.html
+++ b/widget/templates/layouts/list-3.html
@@ -10,9 +10,9 @@
         </div>
         <div id="emptyContainer" class="padded"
             ng-if="!loadingData && (!WidgetHome.items || (WidgetHome.items && WidgetHome.items.length === 0))"></div>
-        <div infinite-scroll="WidgetHome.loadMore()" infinite-scroll-distance="1"
-            data-infinite-container=".infinite-scroll-parent" infinite-scroll-disabled="WidgetHome.noMore">
-            <div class="clickable text-overlay" ng-repeat="item in WidgetHome.items"
+        <div infinite-scroll="WidgetHome.addMore()" infinite-scroll-distance="1"
+            data-infinite-container=".infinite-scroll-parent" infinite-scroll-disabled="WidgetHome.stopScroll">
+            <div class="clickable text-overlay" ng-repeat="item in WidgetHome.displayItems"
                 ng-click="WidgetHome.goToMedia($index)">
                 <div class="plugin-banner clearfix text-overlay">
                     <div class="text-overlay"
