--- a/control/content/templates/categoryHome.html
+++ b/control/content/templates/categoryHome.html
@@ -1,6 +1,6 @@
 <div class="loader-pan" ng-show="ContentCategoryHome.loading"></div>
 <div class="content-home-container">
-    <div class="side-menu-container" >
+    <div class="side-menu-container">
         <div class="side-menu">
             <a data-ng-click="ContentCategoryHome.goToMediaHome()">
                 Media
@@ -29,7 +29,8 @@
             <div class="dropdown" dropdown is-open="status.isopen">
                 <button class="btn btn-default text-left dropdown-toggle sort-dropdown" dropdown-toggle
                     ng-disabled="disabled" aria-expanded="true">
-                    <span class="pull-left">{{ContentCategoryHome.info.data.content.sortCategoriesByValue || 'Newest'}}</span>
+                    <span class="pull-left">{{ContentCategoryHome.info.data.content.sortCategoriesByValue ||
+                        'Newest'}}</span>
                     <span class="chevron icon-chevron-down pull-right"></span>
                 </button>
                 <ul class="dropdown-menu extended" role="menu">
@@ -48,7 +49,8 @@
                 <ul class="dropdown-menu extended" role="menu">
                     <li ng-click="ContentCategoryHome.exportCSV()"><a>Export CSV</a></li>
                     <li ng-click="ContentCategoryHome.getTemplate()"><a>Get Template</a></li>
-                    <li class="margin-bottom-ten" ng-click="ContentCategoryHome.openImportCSVDialog()"><a>Import CSV</a></li>
+                    <li class="margin-bottom-ten" ng-click="ContentCategoryHome.openImportCSVDialog()"><a>Import CSV</a>
+                    </li>
                     <li>
                         <p class="info-note caption margin-bottom-zero">Safari users need to rename the file to .csv to
                             open
@@ -57,13 +59,13 @@
                 </ul>
             </div>
             <div class="col-md-3 padding-zero">
-                <a class="btn btn-success pull-right stretch btn-add" href="#/category" ng-click="scrollToTop()">Add Category</a>
+                <a class="btn btn-success pull-right stretch btn-add" href="#/category" ng-click="scrollToTop()">Add
+                    Category</a>
             </div>
         </div>
 
         <div class="item clearfix">
-            <div
-                id="home-category-list"
+            <div id="home-category-list"
                 class="tab-order draggable-list-view wide-list has-btn-link border-grey border-radius-four infinite-scroll-parent">
                 <div infinite-scroll="ContentCategoryHome.getMore()" infinite-scroll-distance="1"
                     data-infinite-container="#home-category-list" infinite-scroll-disabled="ContentCategoryHome.noMore">
@@ -78,16 +80,23 @@
                                 ng-class="{ 'disabled': ContentCategoryHome.itemSortableOptions.disabled }"></span>
 
                             <div class="media-holder pull-left">
-                                <img load-image="1x1" data-final-src="{{item.data.topImage | resizeImage : 50:50}}"
-                                    ng-if="item.data.topImage">
-                                <img src="../../../../styles/media/holder-1x1.png" ng-if="!item.data.topImage">
+                                <img load-image="1x1" data-final-src="{{item.data.icon | resizeImage : 50:50}}"
+                                    ng-if="item.data.icon && !ContentCategoryHome.isIcon(item.data.icon)">
+                                <div style="color:#5f5f5f"
+                                    ng-if="item.data.icon && ContentCategoryHome.isIcon(item.data.icon)"
+                                    ng-class="item.data.icon">
+                                </div>
+                                <img src="../../../../styles/media/holder-1x1.png" ng-if="!item.data.icon">
                             </div>
                             <div class="copy pull-right">
                                 <a class="text-primary" ng-click="ContentCategoryHome.goToCategory(item.id)"><span
                                         class="title ellipsis pull-left">{{item.data.name}}</span></a>
 
-                                <div class="pull-right">
-                                    <span class="btn-icon btn-delete-icon btn-danger transition-third"
+                                <div class="flex pull-right">
+                                    <span ng-click="ContentCategoryHome.goToCategory(item.id)"
+                                        style="color: #000;" class="btn btn--icon icon icon-pencil3"></span>
+                                    <span style="margin-left: 0px !important;"
+                                        class="btn-icon btn-delete-icon btn-danger transition-third"
                                         ng-click="ContentCategoryHome.removeListItem($index,$event)"></span>
                                 </div>
                             </div>
