--- a/control/content/templates/media.html
+++ b/control/content/templates/media.html
@@ -226,12 +226,12 @@
             <div class="main col-md-9 pull-right">
                 <div class="">
                     <a style="width: 10rem; float: right !important;"
-                        ng-if="!ContentMedia.item || !ContentMedia.item.data || !ContentMedia.item.data.subcategories || ContentMedia.item.data.subcategories.length < 1"
+                        ng-if="!ContentMedia.item || !ContentMedia.item.data || !ContentMedia.item.data.categories || ContentMedia.item.data.categories.length < 1"
                         ng-click="ContentMedia.showCategories()"
                         class="btn btn-success pull-left add-new-item btn-plus-icon-with-text">
                         Add Media Category</a>
                     <a style="width: 10rem; float: right !important;"
-                        ng-if="ContentMedia.item && ContentMedia.item.data && ContentMedia.item.data.subcategories && ContentMedia.item.data.subcategories.length > 0"
+                        ng-if="ContentMedia.item && ContentMedia.item.data && ContentMedia.item.data.categories && ContentMedia.item.data.categories.length > 0"
                         ng-click="ContentMedia.showCategories()" class="btn btn-primary pull-left add-new-item">
                         Edit Media Category</a>
                 </div>
