--- a/widget/assets/css/widget.app.css
+++ b/widget/assets/css/widget.app.css
@@ -1208,4 +1208,194 @@ input[type=range]::-ms-track {
 	  margin-top: -108px;
 	}
   }
+
+  .category-container {
+    flex: 1;
+    padding: 10px;
+    border-radius: 0.25rem 0 0 0.25rem;
+	margin-left: 15px;
+	margin-right: 15px;
+ }
+
+ .category-container .top-row {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 10px;
+	align-items: center;
+	white-space: nowrap
+ }
+
+    .category-container .top-row .category-name {
+		font-size: 1.2rem;
+		color: black;
+		margin: 0;
+		max-width: 40vw;
+		width: 40vw;
+		white-space: nowrap;
+		overflow: hidden;
+		text-overflow: ellipsis
+    }
+
+    .category-container .top-row .category-image-container {
+		height: 3em;
+    	width: 3em;
+    	background: lightgray;
+    	text-align: center;
+    	border-radius: 50%;
+    	padding: 5px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+    }
+
+    .category-container .top-row .input-container {
+        margin-left: auto;
+		display: flex;
+		align-items: center;
+    }
+
+    .category-container .subcategories-container {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+		max-height: 0;
+		overflow: hidden;
+		transition: max-height 0.2s ease-out;
+    }
+
+	.category-container .subcategories-container.expand {
+		max-height: none;
+		transition: max-height 0.2s ease-out;
+    }
+
+
+    .category-container .subcategories-container .subcategory {
+        display: flex;
+        margin-top: 10px;
+    }
+
+	.category-container .subcategories-container .subcategory:not(:first-child) {
+		margin-left: 8px;
+	}
+
+    .category-container .subcategories-container .subcategory .subcategory-name {
+        font-size: 0.7rem;
+        color: #909090;
+        margin: gray;
+        margin-left: 5px;
+    }
+
+
+      #actionItems .btn-success {
+          width: 10rem !important;
+      }
+
+        #actionItems .clearfix::after {
+            clear: none !important;
+        }
+
+        #actionItems .clearfix a {
+            float: right !important;
+        }
+
+        #categories {
+            background-color: var(--c-gray2);
+            padding: 10px;
+            border-radius: 5px;
+        }
+
+        #categories h2 {
+            margin-bottom: 0.25rem;
+            font-size: 1rem;
+            font-weight: bold;
+        }
+
+		.chevron::before {
+			border-style: solid;
+			border-width: 2px 2px 0 0;
+			content: "";
+			display: inline-block;
+			height: 10px;
+			position: relative;
+			transform: rotate(135deg);
+			vertical-align: top;
+			width: 10px;
+			transition: transform .2s ease-in;
+		}
+
+		.minus.subcategory-label::after {
+			display: inline-block;
+			position: absolute;
+			width: 16px;
+			height: 18px !important;
+			left: 4px !important;
+			top: -4px  !important;
+			margin-left: -21px;
+			font-size: 20px  !important;
+			font-weight: 800  !important;
+			color: #fff;
+    		content: "\2212" !important;
+		}
+
+		.chev {
+			cursor: pointer;
+			-moz-transition: all .5s linear;
+			-webkit-transition: all .5s linear;
+			transition: all .5s linear;
+		}
+		
+		.chevron.bottom:before {
+			transform: rotate(-45deg);
+		}
+
+		.subcategory-bubble {
+			background-color: #F2F2F2;
+			padding: 5px 15px;
+			border-radius: 25px;
+			margin-top: 10px;
+			margin-bottom: 10px;
+			display: flex;
+			cursor: pointer;
+		}
+
+		.subcategory-bubble.picked {
+			background-color:#DDDDDD;
+		}
+		
+		.subcategory-bubble p {
+			margin: 0;
+		}
+
+		.filters-footer {
+			display: flex;
+			position: fixed;
+			bottom: 0;
+			left: 0;
+			right: 0;
+			padding: 15px;
+		}
+
+		#filtersContainer {
+			height: 100%;
+			overflow-y: scroll;
+			padding-bottom: 100px;
+		}
+
+		#filterScreen {
+			overflow: hidden;
+			height: 100vh;
+		}
+
+		.apply-button {
+			width: 100%;
+			text-transform: uppercase;
+			font-size: .875rem !important;
+			padding: 0 16px 0 16px !important;
+			height: 36px;
+		}
+
+		.filter-funnel {
+			font-size: 1.5em;
+			color: var(--bf-theme-primary);
+		}
   
