--- a/widget/templates/layouts/list-4.html
+++ b/widget/templates/layouts/list-4.html
@@ -9,7 +9,19 @@
                 ng-bind-html="WidgetHome.media.data.content.descriptionHTML | safeHtml"></p>
         </div>
         <div id="emptyContainer" class="padded"
-            ng-if="!loadingData && (!WidgetHome.items || (WidgetHome.items && WidgetHome.items.length === 0))"></div>
+            ng-if="!loadingData && (!WidgetHome.items || (WidgetHome.items && WidgetHome.items.length === 0))">
+            <div ng-if="WidgetHome.media.data.content.enableFiltering"
+                style="position: absolute;right:2em; top: 2em; cursor: pointer;"
+                ng-click="WidgetHome.goToFilterScreen()">
+                <i class="glyphicon glyphicon-filter filter-funnel"></i>
+            </div>
+        </div>
+        <div style="width: 100%; display: flex; flex-direction: row-reverse;"
+            ng-if="!loadingData && WidgetHome.media.data.content.enableFiltering && WidgetHome.items && WidgetHome.items.length > 0">
+            <div style="padding: 20px; padding-right: 30px; cursor: pointer;" ng-click="WidgetHome.goToFilterScreen()">
+                <i class="glyphicon glyphicon-filter filter-funnel"></i>
+            </div>
+        </div>
         <div class="padded padding-top-zero text-overlay">
             <div class="list-layout" infinite-scroll="WidgetHome.addMore()" infinite-scroll-distance="1"
                 data-infinite-container=".infinite-scroll-parent" infinite-scroll-disabled="WidgetHome.stopScroll">
@@ -22,10 +34,10 @@
                                     role="button"></i>
                             </div>
                             <div class="list-media-holder text-overlay"
-                                 play-btn="{{WidgetHome.items[$index].data.videoUrl.length > 0  || (skipMediaPage && (WidgetHome.items[$index].data.videoUrl.length > 0 || WidgetHome.items[$index].data.audioUrl.length > 0)) }}">
-                                <img ng-if="WidgetHome.items[$index].data.topImage" load-image="1x1"
-                                     crop-width="200" crop-height="200" crop-type="crop"
-                                     data-final-src="{{WidgetHome.items[$index].data.topImage | resizeImage : 200:200}}">
+                                play-btn="{{WidgetHome.items[$index].data.videoUrl.length > 0  || (skipMediaPage && (WidgetHome.items[$index].data.videoUrl.length > 0 || WidgetHome.items[$index].data.audioUrl.length > 0)) }}">
+                                <img ng-if="WidgetHome.items[$index].data.topImage" load-image="1x1" crop-width="200"
+                                    crop-height="200" crop-type="crop"
+                                    data-final-src="{{WidgetHome.items[$index].data.topImage | resizeImage : 200:200}}">
                                 <img ng-if="!WidgetHome.items[$index].data.topImage"
                                     src="../../../styles/media/holder-1x1.png">
                             </div>
@@ -33,7 +45,8 @@
                         <div class="list-item-copy text-left text-overlay">
                             <div class="date-row">
                                 <p class="text-primary margin-zero ellipsis title">
-                                    <a class="ellipsis margin-zero text-primary ">{{WidgetHome.items[$index].data.title}}</a>
+                                    <a
+                                        class="ellipsis margin-zero text-primary ">{{WidgetHome.items[$index].data.title}}</a>
                                 </p>
                                 <i data-ng-if="WidgetHome.items[$index].hasDownloadedMedia && WidgetHome.media.data.content.allowOfflineDownload"
                                     style="margin-left: auto; margin-top: 2px;" class="glyphicon glyphicon-ok-circle"
@@ -48,9 +61,9 @@
                                 </div>
                             </div>
                             <p class="summary ellipsis margin-zero">{{WidgetHome.items[$index].data.summary}}</p>
-                                <span class="list-item-date"
-                                    data-ng-if="WidgetHome.items[$index].data.mediaDate">{{WidgetHome.items[$index].data.mediaDate
-                                    | jsDate | date:"MMMM dd, yyyy"}}</span>
+                            <span class="list-item-date"
+                                data-ng-if="WidgetHome.items[$index].data.mediaDate">{{WidgetHome.items[$index].data.mediaDate
+                                | jsDate | date:"MMMM dd, yyyy"}}</span>
                         </div>
                     </div>
                     <div class="list-item-even col-xs-6 pull-left clickable text-overlay "
@@ -65,30 +78,30 @@
                             <div class="list-media-holder text-overlay"
                                 play-btn="{{WidgetHome.items[$index+1].data.videoUrl.length > 0  || (skipMediaPage && (WidgetHome.items[$index+1].data.videoUrl.length > 0 || WidgetHome.items[$index+1].data.audioUrl.length > 0)) }}">
                                 <img ng-if="WidgetHome.items[$index + 1].data.topImage" load-image="1x1"
-                                     crop-width="200" crop-height="200" crop-type="crop"
-                                     data-final-src="{{WidgetHome.items[$index + 1].data.topImage | resizeImage : 200:200}}">
+                                    crop-width="200" crop-height="200" crop-type="crop"
+                                    data-final-src="{{WidgetHome.items[$index + 1].data.topImage | resizeImage : 200:200}}">
                                 <img ng-if="!WidgetHome.items[$index + 1].data.topImage"
                                     src="../../../styles/media/holder-1x1.png">
                             </div>
                         </div>
                         <div class="list-item-copy text-left text-overlay">
                             <div class="date-row">
-                            <p class="text-primary margin-zero ellipsis title">
-                                <a class="ellipsis margin-zero text-primary ">{{WidgetHome.items[$index +
-                                    1].data.title}}</a>
-                            </p>
-                            <i data-ng-if="WidgetHome.items[$index + 1].hasDownloadedMedia && WidgetHome.media.data.content.allowOfflineDownload"
-                                style="margin-left: auto; margin-top: 2px;" class="glyphicon glyphicon-ok-circle"
-                                role="button"></i>
-                            <!-- <div data-ng-if="currentlyDownloading.indexOf(WidgetHome.items[$index + 1].id) > -1" role="button" class="loader"> -->
-                            <div data-ng-if="currentlyDownloading.indexOf(WidgetHome.items[$index + 1].id) > -1"
-                                class="lds-ring-small">
-                                <div></div>
-                                <div></div>
-                                <div></div>
-                                <div></div>
+                                <p class="text-primary margin-zero ellipsis title">
+                                    <a class="ellipsis margin-zero text-primary ">{{WidgetHome.items[$index +
+                                        1].data.title}}</a>
+                                </p>
+                                <i data-ng-if="WidgetHome.items[$index + 1].hasDownloadedMedia && WidgetHome.media.data.content.allowOfflineDownload"
+                                    style="margin-left: auto; margin-top: 2px;" class="glyphicon glyphicon-ok-circle"
+                                    role="button"></i>
+                                <!-- <div data-ng-if="currentlyDownloading.indexOf(WidgetHome.items[$index + 1].id) > -1" role="button" class="loader"> -->
+                                <div data-ng-if="currentlyDownloading.indexOf(WidgetHome.items[$index + 1].id) > -1"
+                                    class="lds-ring-small">
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                </div>
                             </div>
-                        </div>
                             <p class="summary ellipsis margin-zero">{{WidgetHome.items[$index + 1].data.summary}}</p>
                             <span class="list-item-date"
                                 data-ng-if="WidgetHome.items[$index + 1].data.mediaDate">{{WidgetHome.items[$index +
