--- a/control/content/templates/categoryHome.html
+++ b/control/content/templates/categoryHome.html
@@ -11,7 +11,7 @@
             </a>
         </div>
     </div>
-    <div style="flex: 5">
+    <div style="flex: 5" class="filter-home">
         <h1>Categories</h1>
         <p class="info-note margin-bottom-ten">Use categories if you want your media to be easily filtered. Filtering
             option must be enabled in <a data-ng-click="ContentCategoryHome.navigateToSettings()">Settings </a></p>
