--- a/control/content/templates/home.html
+++ b/control/content/templates/home.html
@@ -10,7 +10,7 @@
             </a>
         </div>
     </div>
-    <div style="flex: 5">
+    <div style="flex: 5;" ng-class="!ContentHome.showFilters ? 'full-width' : 'filter-home'">
         <div class="margin-bottom-thirty" id="carousel"></div>
 
         <div class="margin-bottom-thirty">
