--- a/control/content/templates/media.html
+++ b/control/content/templates/media.html
@@ -37,7 +37,7 @@
                                         </div>
 
                                     </div>
-                                    <div style="margin-left: 15px;">
+                                    <div style="margin-left: 15px; max-width: 70%;">
                                         <h3 class="category-name">{{category.data.name}}</h3>
                                         <p class="category-description">{{category.data.subcategories.length}}
                                             Subcategories
