fixed input field error message

--- a/control/content/templates/category.html
+++ b/control/content/templates/category.html
@@ -69,7 +69,7 @@
             <input type="text" class="form-control" ng-model="ContentCategory.item.data.name" maxlength="70"
                 ng-class="{'border-danger': titleRequired}" />
             <div class="text-left text-danger margin-top-five text-small" ng-show="titleRequired">
-                {{titleRequired}}
+                Required
             </div>
         </div>
     </div>
